All overflows fixed.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -825,6 +825,7 @@ textarea {
 .oppia-navbar-nav .uib-dropdown-menu {
   left: auto;
   right: 0;
+  word-break: break-all;
 }
 
 .oppia-dropdown-submenu > .uib-dropdown-menu {
@@ -1674,6 +1675,7 @@ pre.oppia-pre-wrapped-text {
 
 .oppia-learner-view-card-content {
   word-wrap: break-word;
+  word-break: break-all;
 }
 
 /* Styles for the collections learner view */
@@ -3059,7 +3061,7 @@ md-card.preview-conversation-skin-supplemental-card {
   overflow-wrap: break-word;
   padding: 0.2em;
   position: absolute;
-  word-break: break-word;
+  word-break: break-all;
   -webkit-hyphens: auto;
 }
 .oppia-activity-summary-tile.oppia-activity-playlist-tile .activity-title {
@@ -3783,6 +3785,7 @@ md-card.preview-conversation-skin-supplemental-card {
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
   padding: 8px;
+  word-break: break-all;
 }
 
 .oppia-rte:focus {
@@ -3966,4 +3969,8 @@ span.oppia-issues-learner-action {
 .nav .tooltip-inner {
   max-width: none;
   white-space: nowrap;
+}
+
+.form-group {
+  word-break: break-all;
 }
